--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,4 +2,5 @@ Flask==2.3.3
 Flask-SocketIO==5.3.6
 python-socketio==5.8.0
 requests==2.31.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+Flask-APScheduler==1.13.1 
