--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.8'
 services:
-  esp32-server:
+  esp32-test:
     build: .
-    container_name: esp32-multistream-server
+    container_name: esp32-test
     network_mode: host
     ports:
-      - "5000:5000"
       - "8888:8888/udp"  # Explicitly expose UDP discovery port
-
     volumes:
       - .:/app
     restart: unless-stopped 
