--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.3.3
 Flask-SocketIO==5.3.6
-python-socketio==5.8.0
+Flask-APScheduler==1.13.0
 requests==2.31.0
+python-socketio==5.8.0
 python-dotenv==1.0.0
-Flask-APScheduler==1.13.1 
+opencv-python==4.8.1.78
+numpy==1.24.3 
