--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,5 +4,6 @@ Flask-APScheduler==1.13.0
 requests==2.31.0
 python-socketio==5.8.0
 python-dotenv==1.0.0
-opencv-python==4.8.1.78
-numpy==1.24.3 
+opencv-python==4.7.0.72
+numpy==1.24.3
+ultralytics==8.3.161 
