--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,4 +6,7 @@ python-socketio==5.8.0
 python-dotenv==1.0.0
 opencv-python==4.7.0.72
 numpy==1.24.3
-ultralytics==8.3.161 
+ultralytics==8.3.161
+google-generativeai==0.8.5
+pydantic==2.11.7 
+ 
