--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,12 +7,15 @@ python-socketio==5.8.0
 python-dotenv==1.0.0
 opencv-python==4.8.1.78
 numpy==1.24.3
-ultralytics==8.0.196
-torch==2.0.1
-torchvision==0.15.2
+ultralytics==8.3.163
+torch==2.7.1
+torchvision==0.22.1
 google-generativeai==0.3.2
 pydantic==2.5.0
-transformers==4.35.2
+transformers==4.53.1
 Pillow==10.0.1
-eventlet==0.33.3 
+eventlet==0.33.3
+flash_attn==2.8.0.post2
+timm==0.9.12
+einops==0.7.0 
  
